Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-117021

ASSERT: "self.window" in file qiosviewcontroller.mm, line 110

XMLWordPrintable

    • iOS/tvOS/watchOS
    • ae83f327c (dev), 9be520e44 (6.6), 2f04d66ce (6.5)

      When closing an application from the ios file browser when a native window is shown we hit the assert in qiosviewcontroller.mm, line 110

       

      To reproduce run the attached example, press the click me button, double click on the home button on the ipad and swipe the application up to close it.

       

      If you are running in debug mode with a debugger attached you will see the assert.

       

      You can confirm the assert doesn't happen if the user is not in the "file manager", either before pressing the button or after having closed the file manager (you can do that by selecting a .txt file in the browser)

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vestbo Tor Arne Vestbø
            albert.astals.cid.avid Albert Astals Cid
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes