ios: Fix crash when closing app while showing a native screen

Fixes: QTBUG-117021
Change-Id: Icebae0e815b42c6e0bf39e727fd1a16db5752d78
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit ae83f327cd812c199304159fc9bbd93f4a728fdb)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 9be520e445a6ab6c2bde84e2552ce2404478bfbb)